Bug 1302736 - Fire click events with a clickCount of 2 when the user does a double-tap gesture with double taps not allowed. r=botond

MozReview-Commit-ID: 5qxHMoHXDXh